syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "ChangeRequestReview";

package nem;


import "google/protobuf/timestamp.proto";

message ChangeRequestReview {  
    string uuid = 1;
    string user_uuid = 2;
    string comment = 3;
    ChangeRequestReviewResponse response = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;    
}

enum ChangeRequestReviewResponse { 
    CHANGE_REQUEST_REVIEW_RESPONSE_INVALID = 0;
    CHANGE_REQUEST_REVIEW_RESPONSE_APPROVED = 1;
    CHANGE_REQUEST_REVIEW_RESPONSE_REJECTED = 2;
}
